fixed background image stretch

--- a/client/assets/searchstyles.css
+++ b/client/assets/searchstyles.css
@@ -14,6 +14,10 @@ body {
 .background {
   background-image: url("./imgs/Sakura2.jpg");
   background-position: top;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-size: 100% 100%;
 }
 
 .top {
@@ -223,6 +227,10 @@ body {
 span {
   background-image: url("./imgs/Sakura2.jpg");
   background-position: bottom;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-size: 100% 100%;
   color: var(--white);
   text-shadow: 2px 2px 2px var(--pink);
   display: block;
