--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -16,6 +16,7 @@ body {
   background-attachment: fixed;
   height: 100%;
   background-size: cover;
+  background-size: 100% 100%;
 }
 
 /* Google Image */
